constraint_kubesecrets.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sDisallowedSecret
metadata:
  name: disallow-secrets
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Secret"]
  disabled: true
